--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1646,9 +1646,15 @@ config LOW_CPUCLOCKS
 	help
 	  Ultra low cpu frequencies enabled for CPU and L2 Cache
 
+config GPU_OVERCLOCK
+	bool "Enable GPU Overclocking option"
+	default n
+	help
+	  APQ8064 GPU overclocking 
+
 config USERSPACE_VOLTAGE_CONTROL
-	bool "Enable Userspace CPU Voltage Control"
-	default y
+        bool "Enable Userspace CPU Voltage Control"
+        default n
 	help
 	  Userspace Voltage Control
 
