--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1650,7 +1650,14 @@ config GPU_OVERCLOCK
 	bool "Enable GPU Overclocking option"
 	default n
 	help
-	  APQ8064 GPU overclocking 
+	  APQ8064 GPU overclocking to 487.5
+
+config GPU_OVERCLOCK_450
+        bool "Enable special GPU Overclocking option"
+	depends on GPU_OVERCLOCK
+        default n
+        help
+          APQ8064 GPU overclocking to 450
 
 config USERSPACE_VOLTAGE_CONTROL
         bool "Enable Userspace CPU Voltage Control"
