--- a/arch/arm/configs/cyanogen_mako_defconfig
+++ b/arch/arm/configs/cyanogen_mako_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.0 Kernel Configuration
+# Linux/arm 3.4.65 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -18,7 +18,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_ARM_TICKET_LOCKS=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -50,9 +50,11 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
 CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_LZ4 is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(amperific)"
 CONFIG_SWAP=y
@@ -159,8 +161,8 @@ CONFIG_PERF_EVENTS=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
-CONFIG_SLAB=y
-# CONFIG_SLUB is not set
+# CONFIG_SLAB is not set
+CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 # CONFIG_TRACEPOINTS is not set
@@ -224,11 +226,15 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
-# CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_ROW=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_DEFAULT_DEADLINE=y
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="row"
+CONFIG_DEFAULT_IOSCHED="deadline"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -353,6 +359,10 @@ CONFIG_MSM_RPM=y
 CONFIG_MSM_MPM=y
 CONFIG_MSM_XO=y
 CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
+CONFIG_USERSPACE_VOLTAGE_CONTROL=y
+CONFIG_LOW_CPUCLOCKS=y
+CONFIG_GPU_OVERCLOCK=y
+# CONFIG_GPU_OVERCLOCK_450 is not set
 
 #
 # MSM Board Selection
@@ -450,7 +460,12 @@ CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_IPC_ROUTER_SECURITY is not set
 # CONFIG_MSM_DALRPC is not set
-# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_ARM_AUTO_HOTPLUG=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MIN=384000
+CONFIG_MSM_CPU_FREQ_SUSPEND_MIN=384000
+CONFIG_MSM_CPU_FREQ_SUSPEND_MAX=702000
 CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -506,7 +521,7 @@ CONFIG_MSM_DLOAD_MODE=y
 # CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
-CONFIG_MSM_RUN_QUEUE_STATS=y
+# CONFIG_MSM_RUN_QUEUE_STATS is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
 CONFIG_MSM_SHOW_RESUME_IRQ=y
@@ -543,6 +558,7 @@ CONFIG_MSM_HSIC_SYSMON=y
 CONFIG_MSM_CPU_PWRCTL=y
 CONFIG_MSM_USE_USER_ACCESSIBLE_TIMERS=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_BLX=y
 CONFIG_RESTRICT_ROOTFS_SLAVE=y
 
 #
@@ -713,6 +729,11 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
+CONFIG_INTELLI_MAX_INACTIVE_FREQ=1242000
+# CONFIG_CPUFREQ_LIMIT_MAX_FREQ is not set
+# CONFIG_CPUFREQ_ID_PERFLOCK is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -1570,6 +1591,8 @@ CONFIG_TOUCHSCREEN_LGE_SYNAPTICS=y
 CONFIG_TOUCH_REG_MAP_TM2000=y
 # CONFIG_TOUCHSCREEN_ELAN_TF_3K is not set
 CONFIG_TOUCHSCREEN_CHARGER_NOTIFY=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2434,6 +2457,8 @@ CONFIG_SND_SOC_WCD9304=y
 CONFIG_SND_SOC_WCD9310=y
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_TPA2028D=y
+CONFIG_SOUND_CONTROL_HAX_GPL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2953,7 +2978,8 @@ CONFIG_PRIMA_WLAN=y
 # CONFIG_PRIMA_WLAN_BTAMP is not set
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
-# CONFIG_PRIMA_WLAN_11AC_HIGH_TP is not set
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
+CONFIG_QCOM_VOWIFI_11R=y
 
 #
 # Qualcomm MSM specific device drivers
@@ -3026,6 +3052,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # Caches
@@ -3051,6 +3078,7 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 #
 # Pseudo filesystems
 #
+CONFIG_DCACHE_WORD_ACCESS=y
 CONFIG_PROC_FS=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
@@ -3268,6 +3296,8 @@ CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
 CONFIG_CRYPTO=y
+CONFIG_CRYPTO_AES_ARM=y
+CONFIG_CRYPTO_SHA1_ARM=y
 
 #
 # Crypto core or helper
@@ -3376,6 +3406,8 @@ CONFIG_CRYPTO_DEFLATE=y
 # Library routines
 #
 CONFIG_BITREVERSE=y
+CONFIG_GENERIC_STRNCPY_FROM_USER=y
+CONFIG_GENERIC_STRNLEN_USER=y
 CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_CRC_CCITT=y
