--- a/arch/arm/configs/cyanogen_mako_defconfig
+++ b/arch/arm/configs/cyanogen_mako_defconfig
@@ -626,6 +626,7 @@ CONFIG_HAVE_SMP=y
 CONFIG_SMP=y
 # CONFIG_SMP_ON_UP is not set
 CONFIG_ARM_CPU_TOPOLOGY=y
+CONFIG_ARCH_SCALE_INVARIANT_CPU_CAPACITY=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
