--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -1534,6 +1534,7 @@ config SYS_SUPPORTS_ZBOOT
 	select HAVE_KERNEL_BZIP2
 	select HAVE_KERNEL_LZMA
 	select HAVE_KERNEL_LZO
+	select HAVE_KERNEL_LZ4
 
 config SYS_SUPPORTS_ZBOOT_UART16550
 	bool
